add tag h1 correção

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Controle de Progrmação.01</h1>
+    <h1>Controle de Programação.01</h1>
     <h1>Hello World 2023.</h1>
     <h2>This  is Cold.</h2>
     <p>Hello world.</p>
