--- a/TableControl01.html
+++ b/TableControl01.html
@@ -10,5 +10,7 @@
     <h1>This Is table Color.</h1>
     <h2>Color</h2> 
     <p>Color green <b><em>Green:</em></b></p>
+    <br>
+    <p>Color:<b><i>Blue.</i></b></p>
 </body>
 </html>
