--- a/TableControl01.html
+++ b/TableControl01.html
@@ -11,6 +11,6 @@
     <h2>Color</h2> 
     <p>Color green <b><em>Green:</em></b></p>
     <br>
-    <p>Color:<b><i>Blue.</i></b></p>
+    <p>Color Blue:<b><i>Blue.</i></b></p>
 </body>
 </html>
